--- a/Barbearia Alura/contato.html
+++ b/Barbearia Alura/contato.html
@@ -23,7 +23,18 @@
 		</header>
 
         <main>
+                <form>  
+                    <label for="nomesobrenome">Nome e Sobrenome</label>
+                    <input type="text" id="nomesobrenome">    
 
+                    <label for="email">email</label>
+                    <input type="text" id="email">
+
+                    <label for="telefone">telefone</label>
+                    <input type="text" id="telefone">
+
+                    <input type="submit" value="Enviar Formulário" >
+                </form>
         </main>
 
         <footer>
