--- a/Barbearia Alura/index.html
+++ b/Barbearia Alura/index.html
@@ -10,7 +10,18 @@
 		<header>
 			<h1 class="titulo-principal">Barbearia Alura</h1>
 		</header>
-		<img id="banner" src="banner.jpg">
+		<div class="menu">
+			<nav>
+				<ul>
+					<li><a href="produtos.html">Produtos</a></li>
+					<li><a href="contato.html">Contato</a></li>
+				</ul>
+			</nav>
+
+		</div>
+			<center>
+			<img id="banner" src="banner.jpg">
+			</center>
 		<div class="principal">
 			<h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
 	 
